# yew-lucide

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  icon-nodes.json  justfile  package-lock.json  package.json
examples/basic_usage/: Cargo.toml  README.md
examples/basic_usage/src/: main.rs
src/: lib.rs
