[package]
name = "yew-lucide"
version = "0.317.0"
authors = [
    "John Toohey <john_t@mailo.com>",
    "Pedro Ferreira <me.pedro.ferreira@gmail.com>",
    "Martin Molzer <ga65guy@mytum.de>",
]
categories = ["wasm", "web-programming"]
keywords = ["wasm", "yew", "lucide"]
description = "Yew components for Lucide icons"
license = "MIT"
readme = "./README.md"
repository = "https://gitlab.com/john_t/yew-lucide"
edition = "2021"
include = ["/src"]

[lib]
path = "src/lib.rs"

[dependencies]
yew = "0.20"

[build-dependencies]
serde_json = "1.0.78"
convert_case = "0.5.0"
serde = { version = "1", features = [ "derive" ] }
